--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ html {
   }
   
   input[type="text"],
-  input[type="email"] {
+  input[type="email"], 
+  input[type="modelnum"] {
     padding: 10px 20px;
     border: 1px solid #999;
     border-radius: 3px;
@@ -32,7 +33,8 @@ html {
     outline: none;
   }
   input[type="text"]:focus,
-  input[type="email"]:focus {
+  input[type="email"]:focus,
+  input[type="modelnum"]:focus {
     border-color: #FF6F00;
   }
   
