--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ html {
   }
   
   .modal-wrap {
-    max-width: 600px;
+    max-width: 90%;
     margin: 50px auto;
     -webkit-transition: -webkit-transform 300ms ease-in-out;
     transition: -webkit-transform 300ms ease-in-out;
